<resources>
    <string name="app_name">My College</string>
    <string name="svcetimage">svcetimage</string>
    <string name="image1">image1</string>
    <string name="tourism">TOURISM</string>
    <string name="education">EDUCATION</string>
    <string name="trasportation">TRASPORTATION</string>
    <string name="security">SECURITY</string>
    <string name="atm">ATM</string>
    <string name="hospital">HOSPITAL</string>
    <string name="entertainment">ENTERTAINMENT</string>
    <string name="tirumala">TIRUMALA</string>
    <string name="sri_balaji_temple">SRI BALAJI TEMPLE</string>
    <string name="button">Button</string>
    <string name="content_tirumala_is_a_census_town_in_chittoor_district_of_the_indian_state_of_andhra_pradesh_the_town_is_a_part_of_tirupati_urban_development_authority_and_located_in_tirupati_rural_mandal_of_tirupati_revenue_division_5_it_is_a_hill_town_where_tirumala_venkateswara_temple_is_located_which_is_the_abode_of_lord_venkateswara">CONTENT : Tirumala is a census town in Chittoor district of the Indian state of Andhra Pradesh. The town is a part of Tirupati Urban Development Authority and located in Tirupati (rural) mandal of Tirupati revenue division.[5] It is a hill town where Tirumala Venkateswara Temple is located, which is the abode of Lord Venkateswara.</string>
    <string name="sri_balaji_temple1">Sri_Balaji_temple1</string>
    <string name="official_web_site">Official web site</string>
    <string name="direction">Direction</string>
    <string name="sri_balaji_temple2">Sri_Balaji_Temple2</string>
    <string name="kapila_theertham">KAPILA THEERTHAM</string>
    <string name="kapila_theertham_temple_is_the_only_shiva_temple_in_the_vicinity_of_tirupati_it_is_also_said_to_be_one_of_the_108_sacred_teerthas_springs_on_tirumala_hills_the_siva_lingam_here_is_made_of_brass_a_huge_stone_statue_of_a_seated_bull_nandhi_greets_devotees_at_the_entrance_to_the_temple">Kapila Theertham temple is the only Shiva temple in the vicinity of Tirupati. It is also said to be one of the 108 sacred teerthas (springs) on Tirumala hills. The Siva lingam here is made of brass. A huge stone statue of a seated bull Nandhi, greets devotees at the entrance to the temple.</string>
    <string name="kapila_theertham_image">kapila_theertham_image</string>
    <string name="zoological_park">ZOOLOGICAL PARK</string>
    <string name="sri_padmavathi_temple">SRI PADMAVATHI TEMPLE</string>
    <string name="zoo1">Zoo1</string>
    <string name="padmavathi_temple1">padmavathi temple1</string>
    <string name="content_kapila_theertham_is_a_famous_saivite_temple_and_theertham_located_at_tirupati_in_the_chittoor_district_of_andhra_pradesh_india_the_idol_is_believed_to_be_installed_by_kapila_muni_and_hence_lord_siva_here_is_referred_to_as_kapileswara">CONTENT : Kapila Theertham is a famous Saivite Temple and Theertham, located at Tirupati in the Chittoor District of Andhra Pradesh, India. The idol is believed to be installed by Kapila Muni and hence Lord Siva here is referred to as Kapileswara.</string>
    <string name="directions">Directions</string>
    <string name="content_sri_venkateswara_zoological_park_has_been_established_on_modern_concepts_of_zoo_the_park_is_named_after_the_lord_venkateswara_of_seven_hills_in_tirupati_and_the_zoo_contains_so_many_animals_and_saperately_it_contain_lion_safari">CONTENT : Sri Venkateswara Zoological Park has been established on modern concepts of Zoo ... The Park is named after the Lord Venkateswara of Seven Hills in Tirupati and the Zoo contains so many animals and saperately it contain Lion Safari.</string>
    <string name="content_padmavathi_temple_1_is_the_temple_dedicated_to_goddess_padmavathi_or_alamelumanga_the_consort_of_lord_venkateswara_the_temple_is_situated_in_tiruchanur_at_a_distance_of_5_km_from_tirupati_in_chittoor_district_of_andhra_pradesh_india_the_temple_is_being_administered_by_tirumala_tirupati_devasthanams">CONTENT : Padmavathi Temple[1] is the temple dedicated to Goddess Padmavathi or Alamelumanga, the consort of Lord Venkateswara. The Temple is situated in Tiruchanur, at a distance of 5 km from Tirupati in Chittoor district of Andhra Pradesh, India. The Temple is being administered by Tirumala Tirupati Devasthanams.</string>
    <string name="govinda_raja_temple">GOVINDA RAJA TEMPLE</string>
    <string name="content_sri_govindarajaswamy_temple_is_an_ancient_hindhu_vaishnavite_temple_situated_at_the_heart_of_the_tirupati_city_in_chittoor_district_of_andhra_pradesh_state_in_india_the_temple_was_built_during_12_century_and_was_consecrated_in_the_year_1130_ad_by_saint_ramanujacharya_1_the_temple_is_one_of_the_earliest_structures_in_tirupati_and_also_one_of_the_biggest_temple_complex_in_chittoor_district_the_tirupati_down_hill_city_is_built_around_this_temple_the_temple_at_current_is_being_administered_by_tirumala_tirupati_devasthanams">CONTENT : Sri Govindarajaswamy Temple is an ancient Hindhu-vaishnavite temple situated at the heart of the Tirupati city in Chittoor District of Andhra Pradesh state in India. The temple was built during 12 century and was consecrated in the year 1130 AD by Saint Ramanujacharya.[1] The temple is one of the earliest structures in Tirupati and also one of the biggest temple complex in Chittoor district. The Tirupati(down hill) city is built around this temple. The temple at current is being administered by Tirumala Tirupati Devasthanams.</string>
    <string name="iskon_temple">ISKON TEMPLE</string>
    <string name="content_tirupati_iskon_temple_is_a_beautiful_temple_of_lord_krishna_the_architecture_of_the_temple_is_very_beautiful_we_can_spend_hours_in_the_temple_seeing_the_deities_architecture_and_the_paintings_it_is_good_to_visit_the_temple_in_the_evening_hours_to_experience_the_beauty_of_the_temple">CONTENT : Tirupati Iskon Temple is a beautiful temple of Lord Krishna . The architecture of the temple is very beautiful . We can spend hours in the temple seeing the Deities , Architecture and the paintings. It is good to visit the temple in the evening hours to experience the beauty of the temple.</string>
    <string name="timings_morning_4_30am_5_00am">TIMINGS:Morning:4:30am-5:00am</string>
    <string name="evening_7_30pm_8_30pm">Evening:7:30pm-8:30pm</string>
    <string name="image6">image6</string>
    <string name="tiruchanur_temple">TIRUCHANUR TEMPLE</string>
    <string name="sri_kalahasti">SRI KALAHASTI</string>
    <string name="image">Image</string>
    <string name="content_srikalahasti_is_a_holy_town_in_chittoor_district_of_the_indian_state_of_andhra_pradesh_the_town_is_a_part_of_tirupati_urban_development_authority_which_is_located_on_the_banks_of_the_river_swarnamukhi_the_town_is_known_for_srikalahasteeswara_temple_dedicated_to_shiva_representing_one_of_the_pancha_bhoota_sthalams">CONTENT : Srikalahasti is a holy town in Chittoor district of the Indian state of Andhra Pradesh. ... The town is a part of Tirupati Urban Development Authority, which is located on the banks of the River Swarnamukhi. The town is known for Srikalahasteeswara Temple dedicated to Shiva representing one of the Pancha Bhoota Sthalams.</string>
    <string name="timings_6_00am_9_00pm">Timings : 6:00am-9:00pm</string>
    <string name="sri_venkateswara_university">SRI VENKATESWARA UNIVERSITY</string>
    <string name="sree_vidyanikethan_college">SREE VIDYANIKETHAN COLLEGE</string>
    <string name="sri_venkateswara_engineering_college">SRI VENKATESWARA ENGINEERING COLLEGE</string>
    <string name="chadalavada_ramanama_engineering_college">CHADALAVADA RAMANAMA ENGINEERING COLLEGE</string>
    <string name="annamacharya_institute_of_technology_and_sciences">Annamacharya Institute of Technology and Sciences</string>
    <string name="sri_padmavati_mahila_visvavidyalayam">SRI PADMAVATI MAHILA VISVAVIDYALAYAM</string>
    <string name="yogananda_engineering_college">YOGANANDA ENGINEERING COLLEGE</string>
    <string name="sree_rama_engineering_college">SREE RAMA ENGINEERING COLLEGE</string>
    <string name="crec">crec</string>
    <string name="aits">aits</string>
    <string name="spmv">spmv</string>
    <string name="svec">svec</string>
    <string name="yec">yec</string>
    <string name="srec">srec</string>
    <string name="tiruchanur">tiruchanur</string>
    <string name="image8">Image8</string>
    <string name="svu">svu</string>
    <string name="content_sri_venkateswara_university_college_of_engineering_was_established_as_a_constituent_college_of_the_sri_venkateswara_university_tirupati_in_the_year_1959_tirupati_the_temple_town_lies_at_foot_hills_of_tirumala_the_abode_of_sri_venkateswara_the_lord_of_seven_hills">CONTENT : Sri Venkateswara University College of Engineering was established as a constituent college of the Sri Venkateswara University, Tirupati, in the year 1959. Tirupati, the temple town lies at foot-hills of Tirumala, the abode of Sri Venkateswara, the Lord of Seven-hills.</string>
</resources>
