<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="375dp"
        android:layout_height="180dp"
        android:contentDescription="@string/image1"
        android:src="@drawable/sri_balaji_temple"
        android:scaleType="fitStart"
        tools:ignore="MissingConstraints">

    </ImageView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="30dp"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="0dp">


        <Button
            android:id="@+id/button1"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:text="@string/tourism"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button2"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:text="@string/education"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button3"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:text="@string/trasportation"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/button4"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:text="@string/entertainment"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button5"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:text="@string/atm"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/button6"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:text="@string/hospital"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>