<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sri_Balaji_temple"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="410dp"
        android:layout_height="180dp"
        android:id="@+id/ImageView2"
        android:src="@drawable/sri_balaji_temple"
        android:scaleType="fitStart"
        android:contentDescription="@string/sri_balaji_temple1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center">

    <TextView
        android:layout_width="360dp"
        android:layout_height="120dp"
        android:scaleType="fitStart"
        android:text="@string/content_tirumala_is_a_census_town_in_chittoor_district_of_the_indian_state_of_andhra_pradesh_the_town_is_a_part_of_tirupati_urban_development_authority_and_located_in_tirupati_rural_mandal_of_tirupati_revenue_division_5_it_is_a_hill_town_where_tirumala_venkateswara_temple_is_located_which_is_the_abode_of_lord_venkateswara"
        />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_marginEnd="5dp"
            tools:ignore="ButtonStyle"
            android:onClick="Tirumala_official_web_site"
            android:text="@string/official_web_site"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_marginStart="5dp"
            tools:ignore="ButtonStyle,OnClick"
            android:text="@string/direction"
            android:onClick="Tirumala_Direction"
            />

    </LinearLayout>
</LinearLayout>